fixed the collapsing first listing in the bookshelf

--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -129,16 +129,19 @@ input.large_box
   height: 60px;
 
   background-color: white;
-  width: 100%;
+  /*width: 100%;*/
+  /* fix for collapsed box when only one is visible */
+  width: 330px;
   padding-top: 15px;
   padding-bottom: 15px;
   margin: 0px;
   margin-top: 10px;
+  /* fix for collapsed box when only one is visible */
+  margin-bottom:5px;
   -webkit-box-shadow: 
         1px 1px   0 rgba(0,   0,   0,   0.100), 
         3px 3px   0 rgba(255, 255, 255, 1.0), 
         4px 4px   0 rgba(0,   0,   0,   0.125);
-  
 }
 
 .details {
